# geospatial-intelligence-agent

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  app.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: category_groups.json  retrieval_weights.json  theme_rules.json
data/features/: place_features.json  place_features.parquet
data/reports/: data_quality_report.json  eda_summary.json  eda_summary.md  evaluation_report.json
deployment/: azure-container-apps.md  azure-env.example  docker-run.md
src/geoinsight/: __init__.py  cli.py  config.py  logging_config.py  schemas.py
src/geoinsight/agent/: __init__.py  nodes.py  state.py  tools.py  workflow.py
src/geoinsight/api/: __init__.py  app.py  dependencies.py  errors.py  routes.py  schemas.py
src/geoinsight/data_quality/: __init__.py  profiling.py  validation.py
tests/: conftest.py  test_api.py  test_cleaner_deduplication.py  test_cloud_readiness.py  test_contextual_thematic.py  test_description_builder.py  test_edge_embeddings.py  test_geoinsight_agent_services.py  test_geoinsight_data_quality.py  test_geoinsight_eda.py  test_geoinsight_features.py  test_geoinsight_retrieval.py  test_graph_workflow.py  test_llm_provider_selection.py  test_llm_ranking_consistency.py  test_query_pipeline_wrapper.py  test_retriever.py  test_schemas.py  test_spatial_features.py  test_spatial_relations.py  test_streamlit_app_helpers.py  test_thematic_enrichment.py
(+47 files in other folders)
